# GSuite

./: .gitignore  .gitmodules  README.md  exporter_wrapper  pyproject.toml
MCPs/WebDebug/: README.md  main.py  pyproject.toml  requirements.txt
MCPs/simple_webdebug/: server.py  simple_debug.py
cheatsheets/: README.md  launch.sh  restart.sh  styles.css
cheatsheets/backend/: README.md  package-lock.json  package.json  server.js  setup-postgres.sh  sync-local-to-mongo.js  sync-local-to-postgres.js
cheatsheets/backend/config/: db.js
cheatsheets/backend/controllers/: sheet.controller.js  user.controller.js
cheatsheets/backend/middleware/: upload.js
cheatsheets/backend/models/: Sheet.js  User.js  index.js  sheet.model.js  user.model.js
cheatsheets/backend/routes/: sheet.local.routes.js  sheet.routes.js  user.local.routes.js  user.routes.js
cheatsheets/data/: sheets.json
cheatsheets/data/sheets/: bash-cmd.md  httpsrequests.html
cheatsheets/frontend/: api.js  app.js  index.html  styles.css
cheatsheets/frontend/renderers/: README.md  html.js  index.js  markdown.js  pdf.js  plain-text.js  worker-manager.js
cheatsheets/frontend/renderers/workers/: html-worker.js  markdown-worker.js  (+2 more)
converters/: __init__.py  gui.py
deprecated/: lockscreen  recap  spycraft_agent_system.plist  spycraft_daemon.plist
imageshrink/: imageshrink.sh  png.sh
internal/: __init__.py  load_environment.py  resource_manager.py  system_config.py
services/: services.txt
services/ange-gardien/: Cargo.toml  ange-gardien.service
services/ange-gardien/benches/: monitoring_bench.rs
services/ange-gardien/src/: analysis.rs  database.rs  lib.rs  main.rs  monitor.rs  network.rs  python.rs  security.rs  time.rs
services/backanim/: README.md  com.user.backanim.plist  requirements.txt
services/backanim/src/: background_changer.py  image_generator.py  image_processor.py  log_cleaner.py
tests/: __init__.py  pyproject.toml  requirements-test.txt  test_resource_manager.py  test_security_scanner.py
watchmasters/: Containerization___Orchestration_Cheat_Sheet.csv  dataflow_monitor  integrity_monitor  security_scanner  setup_watchmaster
